--- a/examples/style.css
+++ b/examples/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,600');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,500,600');
+
 * {
   box-sizing: border-box;
 }
