--- a/examples/style.css
+++ b/examples/style.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,600');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,500,600');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Mono');
+
 
 * {
   box-sizing: border-box;
