--- a/examples/style.css
+++ b/examples/style.css
@@ -576,3 +576,38 @@ body {
   top: 14px;
   left: 14px;
 }
+
+.toolbox {
+  max-width: 350px;
+}
+
+#controls .actions li h2 {
+  font: 12px/16px 'Open Sans';
+  margin: 0;
+}
+
+#controls .actions li {
+  margin-bottom: 24px;
+}
+
+#controls .actions input {
+  margin-top: 4px;
+}
+
+#controls .actions input:checked+label h2 {
+  font-weight: 600;
+}
+
+#controls .actions .description {
+  margin-top: 4px;
+}
+#content, #controls {
+  font-family: 'Open Sans';
+}
+#controls .actions .description span {
+  background: #f5f5f5;
+  padding: 6px;
+  font-family: 'Roboto Mono';
+  display: block;
+  margin: 2px 0;
+}
