examples refactor after guides WIP

--- a/examples/style.css
+++ b/examples/style.css
@@ -133,7 +133,7 @@ body {
 .h2 {
   color: #2E3C43;
   line-height: 32px;
-  font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
   font-size: 20px;
   font-weight: 600;
 }
@@ -141,18 +141,28 @@ body {
 .h3 {
   color: #2E3C43;
   line-height: 22px;
-  font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
   font-size: 16px;
   font-weight: 600;
   margin-top: 8px;
   margin-bottom: 8px;
 }
 
+.toolbox-text {
+  color: #747D82;
+  font-size: 12px;
+  line-height: 16px;
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  font-weight: 400;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
 .open-sans {
   color: #747D82;
   font-size: 12px;
   line-height: 16px;
-  font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
   font-weight: 400;
   margin-top: 0;
   margin-bottom: 0;
@@ -195,7 +205,7 @@ body {
   display: inline-block;
   color: #2E3C43;
   line-height: 28px;
-  font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
   font-size: 20px;
   font-weight: 600;
   margin: 0;
@@ -226,7 +236,7 @@ body {
 }
 
 .box section .usage header {
-  font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
   font-size: 12px;
   font-weight: 600;
   margin: 0 0 12px;
@@ -251,7 +261,7 @@ body {
 
 #content,
 #controls {
-  font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
 }
 
 /* BOX CONTROLS */
@@ -313,7 +323,7 @@ body {
 .legend h3 {
   color: #2E3C43;
   line-height: 24px;
-  font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
   font-size: 16px;
   font-weight: 600;
   margin: 0 0 8px;
@@ -334,7 +344,7 @@ body {
 .widget .category {
   color: #2E3C43;
   line-height: 16px;
-  font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
   font-size: 16px;
   font-weight: 600;
   margin: 0;
@@ -492,7 +502,7 @@ body {
 }
 
 .maptabs .maptab a {
-  font: 12px 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font: 12px 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 600;
   text-decoration: none;
   padding: 12px;
