--- a/examples/style.css
+++ b/examples/style.css
@@ -543,12 +543,13 @@ body {
 }
 
 .point-mark {
-  min-width: 10px;
-  min-height: 10px;
+  width: 10px;
+  height: 10px;
   align-self: center;
   border-radius: 50%;
   margin-right: 12px;
   box-sizing: border-box;
+  display: inline-block;
 }
 
 .image-mark {
